--- a/style.css
+++ b/style.css
@@ -206,6 +206,11 @@ footer {
 
   main div {
     width: clamp(2rem, 36.6rem, 100%);
+    transition: all 300ms ease-in-out;
+  }
+
+  main div:hover {
+    transform: scale(1.1);
   }
 
   .contact {
